<resources>
    <string name="app_name">E-Commerce Project</string>

    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="donthave">Dont have an account?</string>
    <string name="alreadyhave">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="forgot">forgot password ?</string>
    <string name="popular">Popular</string>
    <string name="welcome">Hi Rechard</string>
    <string name="Order_eat">Order &amp; Eat</string>
    <string name="profil_photo"></string>
    <string name="recherche">Find your food!</string>
    <string name="Categorie">Categories</string>
    <string name="deadline">20Dec-25Dec</string>
    <string name="livreur"></string>
    <string name="free">Free Delivery</string>
    <string name="pub">Order Now</string>
    <string name="Category_pizza"></string>
    <string name="Catebory_burger"></string>
    <string name="Category_Hotdog"></string>
    <string name="Category_drink"></string>
    <string name="pizza">Pizza</string>
    <string name="Burger">Burger</string>
    <string name="Hotdog">Hotdog</string>
    <string name="Drink">Drink</string>
    <string name="title_pizza_pupular">Pizza</string>
    <string name="prix_pizza">15.5</string>
    <string name="dt_pizza">dt</string>
    <string name="title_burger">Burger</string>
    <string name="prix_burger">17.8</string>
    <string name="dt_burger">dt</string>
    <string name="achat"></string>
    <string name="home"></string>
    <string name="support"></string>
    <string name="settings"></string>
    <string name="add_pizza">+Add</string>
    <string name="dt"> dt </string>
    <string name="num"> num </string>
    <string name="plus"> </string>
    <string name="moins">  </string>
    <string name="ADDTOCART">  ADD TO CART</string>
    <string name="Pizza"> Pizza</string>

    <string name="logout">Logout</string>
    <string name="nom">Rechard Manson</string>
    <string name="mailadr">rechardmanson@gmail.com</string>
    <string name="profil"></string>
    <string name="commande"></string>
    <string name="commande1">Commande</string>
    <string name="notification1">Notifications</string>
    <string name="notification"></string>
    <string name="favoris"></string>
    <string name="favoris1">Favoris</string>
    <string name="adr">Adresse:</string>
    <string name="num_ph">Phone number:</string>
    <string name="adresse">Rue Ajmi Ben saad</string>
    <string name="tel">53735944</string>
    <string name="linearcommande"></string>
    <string name="linearcnotif"></string>
    <string name="linearfavoris"></string>
    <string name="details">2 pizza saucisse</string>
    <string name="commandes">Vos Commandes:</string>
    <string name="precedent"></string>
    <string name="notif">Notifications</string>
    <string name="detailnotif">votre commande est prêt </string>

    <string name="favorite">vous n avez pas selectionné aucun produit</string>



</resources>