<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orange"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgreg"
        android:layout_width="341dp"
        android:layout_height="188dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_sign_up_n6im" />

    <EditText
        android:id="@+id/regphone"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regusername" />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regphone" />

    <EditText
        android:id="@+id/regpass"
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regemail" />

    <EditText
        android:id="@+id/regusername"
        android:layout_width="297dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgreg" />

    <Button
        android:id="@+id/breg2"
        android:layout_width="309dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Register"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpass" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/alreadyhave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breg2" />

    <TextView
        android:id="@+id/reglog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="onTextClick"
        android:text="@string/login"
        android:textColorHint="#000000"
        app:layout_constraintStart_toEndOf="@+id/already"
        app:layout_constraintTop_toBottomOf="@+id/breg2" />

</androidx.constraintlayout.widget.ConstraintLayout>