<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".paiementActivity">

<TextView
        android:id="@+id/piz"
        android:layout_width="391dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/Pizza"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="305dp"
        android:layout_height="321dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/piz"
        app:srcCompat="@drawable/pop_1" />

    <EditText
        android:id="@+id/num"
        android:layout_width="99dp"
        android:layout_height="56dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/sii"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:text="@string/dt"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num" />

    <Button
        android:id="@+id/add_pizza"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/orange"
        android:backgroundTint="#FF4500"
        android:text="@string/ADDTOCART"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sii"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/pl"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="29dp"
        android:contentDescription="plus"
        android:scaleType="fitCenter"
        android:src="@drawable/plus"

        app:layout_constraintBottom_toTopOf="@+id/add_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sii"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/min"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="minus"
        android:scaleType="fitCenter"
        android:src="@drawable/minus"
        app:layout_constraintEnd_toStartOf="@+id/num"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
