<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">
    <ScrollView
        android:layout_width="411dp"
        android:layout_height="732dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="340dp"
                    android:background="@drawable/top_backgraound"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profil"
                    android:layout_width="188dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:srcCompat="@drawable/profil" />

                <TextView
                    android:id="@+id/nom"
                    android:layout_width="242dp"
                    android:layout_height="28dp"
                    android:text="@string/nom"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#FF5722"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/profil"
                    app:layout_constraintStart_toStartOf="@+id/profil"
                    app:layout_constraintTop_toBottomOf="@+id/profil" />

                <TextView
                    android:id="@+id/mailadr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mailadr"
                    android:textColor="#E65D13"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/nom"
                    app:layout_constraintStart_toStartOf="@+id/nom"
                    app:layout_constraintTop_toBottomOf="@+id/nom" />

                <LinearLayout
                    android:layout_width="362dp"
                    android:layout_height="158dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/white_background"
                    android:elevation="3dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mailadr">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/linearcommande"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="0.333"
                            android:background="@drawable/grey_background"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="95dp"
                                android:layout_height="81dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="12dp"
                                android:background="@drawable/oval_background">

                                <ImageView
                                    android:id="@+id/commande"
                                    android:layout_width="85dp"
                                    android:layout_height="65dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/commande" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/commande1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="commande"
                                android:textAlignment="center"
                                android:textColor="#100B04"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearnotif"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="0.333"
                            android:background="@drawable/grey_background"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="95dp"
                                android:layout_height="81dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="12dp"
                                android:background="@drawable/oval_background">

                                <ImageView
                                    android:id="@+id/notification"
                                    android:layout_width="85dp"
                                    android:layout_height="65dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/cloche" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/notification1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="notification"
                                android:textAlignment="center"
                                android:textColor="#100B04"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearfavoris"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="0.333"
                            android:background="@drawable/grey_background"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="95dp"
                                android:layout_height="81dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="12dp"
                                android:background="@drawable/oval_background">

                                <ImageView
                                    android:id="@+id/favoris"
                                    android:layout_width="85dp"
                                    android:layout_height="65dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/favoris" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/favoris1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="Favoris"
                                android:textAlignment="center"
                                android:textColor="#100B04"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="234dp">

                <TextView
                    android:id="@+id/adr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="48dp"
                    android:text="Adresse :"
                    android:textColor="#E65D13"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/num_ph" />

                <TextView
                    android:id="@+id/num_ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="36dp"
                    android:text="Phone number :"
                    android:textColor="#E65D13"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/adresse"
                    android:layout_width="250dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:text="rue ajmi ben saad "
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toEndOf="@+id/adr"
                    app:layout_constraintTop_toBottomOf="@+id/num_ph" />

                <TextView
                    android:id="@+id/tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="36dp"
                    android:text="53735944"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toEndOf="@+id/num_ph"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="397dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:backgroundTint="#F9A826"
                    android:text="@string/logout"
                    android:textColor="#FDFCFC"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>